Fun with Java 14